Namespace-team-b/deployment-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b
  namespace: team-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-b
  template:
    metadata:
      labels:
        app: app-b
      annotations:
        irsa-restart: "v1"
    spec:
      serviceAccountName: team-b-sa
      containers:
      - name: nginx
        image: nginx
        resources:
          requests:
            cpu: "20m"
            memory: "128Mi"
          limits:
            cpu: "30m"
            memory: "256Mi"

        # 🔥 READINESS PROBE
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3

        # 🔥 LIVENESS PROBE
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3

        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html

      volumes:
      - name: html-volume
        configMap:
          name: nginx-html
