Namespace-team-b/service-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-b-service
  namespace: team-b
spec:
  selector:
    app: app-b
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
