Namespace-team-b/ingress-b.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-b
  namespace: team-b
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip   # ✅ IMPORTANT FIX
    alb.ingress.kubernetes.io/group.name: shared-alb
spec:
  ingressClassName: alb
  rules:
  - host: app-b.cloudai.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-b-service
            port:
              number: 80
