Namespace-team-b/NetworkPolicyDeny-b.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: team-b
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
